--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.1",
-    "socket.io-client": "^4.5.2",
-    "sortablejs": "^1.15.0"
+    "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
