--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dropzone-ui/react": "^6.7.20",
     "@heroicons/react": "^2.0.12",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.1",
     "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.17",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
