--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.1",
+    "react-select-search": "^4.1.5",
     "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
