--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@dropzone-ui/react": "^6.7.20",
     "@heroicons/react": "^2.0.12",
+    "@tanstack/match-sorter-utils": "^8.7.0",
+    "@tanstack/react-table": "^8.7.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
