--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@tanstack/react-table": "^8.7.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
+    "downloadjs": "^1.4.7",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.1",
     "react-select-search": "^4.1.5",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.1/xlsx-0.19.1.tgz"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/downloadjs": "^1.4.3",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.17",
     "@types/react-datepicker": "^4.8.0",
