--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/match-sorter-utils": "^8.7.0",
     "@tanstack/react-table": "^8.7.0",
     "axios": "^0.27.2",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "downloadjs": "^1.4.7",
     "react": "^18.2.0",
@@ -22,7 +23,6 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.7.0",
-    "react-select-search": "^4.1.5",
     "react-window": "^1.8.8",
     "socket.io-client": "^4.5.2",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.1/xlsx-0.19.1.tgz"
