--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "downloadjs": "^1.4.7",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/downloadjs": "^1.4.3",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.17",
     "@types/react-datepicker": "^4.8.0",
