--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
     "@dropzone-ui/react": "^6.7.20",
     "@heroicons/react": "^2.0.12",
     "@tanstack/match-sorter-utils": "^8.7.0",
