--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dropzone-ui/react": "^6.7.20",
     "@heroicons/react": "^2.0.12",
+    "@react-pdf/renderer": "^3.1.8",
     "@tanstack/match-sorter-utils": "^8.7.0",
     "@tanstack/react-table": "^8.7.0",
     "axios": "^0.27.2",
