--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.29.3",
     "downloadjs": "^1.4.7",
     "jquery": "^3.6.3",
+    "jsbarcode": "^3.11.5",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
